Fixed bug #63111 (is_callable() lies for abstract static method)